# routes/events.js
@@ -1,11 +1,10 @@
 const express = require('express');
 
-const eventsController = require('../controllers/users');
+const eventsController = require('../controllers/events');
 const router = express.Router();
 
 router.get('/', eventsController.getAll);
 router.get('/:id', eventsController.getSingle);
-router.post('/', eventsController.createUser);
-
+router.post('/', eventsController.createEvent);
 
 module.exports = router;
